--- a/website/source/pug/pages/index.pug
+++ b/website/source/pug/pages/index.pug
@@ -1,7 +1,6 @@
 ﻿extends ../templates/startpage.pug
 block head
-    title Startpage - Azure Storage
+    title Startpage - Service Worker Application
 block content
-    h2.font-normal Basic Javascript Multiplayer Game
+    h2.font-normal Basic "Game"
     include ../blocks/startpage/section_game.pug
-    //include ../blocks/startpage/section_log.pug
